--- a/index.html
+++ b/index.html
@@ -153,18 +153,14 @@
 </div>
 </div>
 </div><div id="risk_management/slide1" class="slide center" data-transition="uncover"><div class="content center" ref="risk_management/slide1/2">
-<h2>Assessment</h2>
-
-<h2>How Risky is this change?</h2>
+<h2>How Risky is the change?</h2>
 
 <div class="notes">
 <p>How will your users be impacted by it? What is the absolute worst thing that could happen? What happens if 2 servers are serving different versions of this code?</p>
 </div>
 </div>
 </div><div id="risk_management/slide1" class="slide center" data-transition="uncover"><div class="content center" ref="risk_management/slide1/3">
-<h2>Reduction</h2>
-
-<h2>Can you reduce this risk of this change?</h2>
+<h2>Can you reduce the risk?</h2>
 
 <div class="notes">
 <p>Slow rollout with feature flags, Migrating data(column names)</p>
