--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 </div>
 </div>
 </div><div id="conclusion/slide1" class="slide center" data-transition="uncover"><div class="content center" ref="conclusion/slide1/1">
-<h1>Contious Improvment</h1>
+<h1>Continuous Improvement</h1>
 
 <div class="notes">
 <p>Over time lots of small changes can turn a clunker into a well oiled machine.
